<resources>
    <string name="app_name">Izgubljeni ljubimci</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="facebook_app_id">293713441654119</string>
    <string name="fb_login_protocol_scheme">fb293713441654119</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registriraj">Registriraj</string>
    <string name="potvrdi_lozinku">Potvrdi lozinku</string>
    <string name="lozinka_min_6_znakova">Lozinka min 6 znakova</string>
    <string name="adresa">Adresa</string>
    <string name="email">Email</string>
    <string name="ime_prezime" />
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="grad">Grad</string>
    <string name="upanija">Županija</string>
    <string name="broj_mobitela">Broj mobitela</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="log_in">Log in</string>
    <string name="lozinka">Lozinka</string>
    <string name="poka_i_lozinku">Pokaži lozinku</string>
    <string name="odaberi_slike">Odaberi slike</string>
    <string name="obrisi_slik">Obriši sliku</string>
    <string name="oznaka" />
    <string name="uplodaj">Uplodaj</string>
    <string name="izgubljeno">Izgubljeno</string>
    <string name="na_eno">Nađeno</string>
    <string name="ma_ka">Mačka</string>
    <string name="pas">Pas</string>
    <string name="ptica">Ptica</string>
    <string name="zec">Zec</string>
    <string name="drugo">Drugo</string>
    <string name="opis">Opis</string>
    <string name="stanje">Stanje</string>
    <string name="vlasnik">Vlasnik</string>
    <string name="status">Status</string>
    <string name="vrsta">vrsta</string>
    <string name="datum">Datum</string>
    <string name="zupanija">Zupanija</string>
    <string name="pretra_i">Pretraži</string>
    <string name="Stanjecard">\"Stanje: \"</string>
    <string name="slike">Slike</string>
    <string name="video">Video</string>
    <string name="po_etna">Početna</string>
    <string name="nova_objava">Nova objava</string>
    <string name="moje_objave">Moje objave</string>
    <string name="moj_profil">Moj profil</string>
    <string name="upanija_z">Županija:</string>
    <string name="a_urirano_z">Ažurirano:</string>


</resources>
