<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxBackgroundMode="outline"
            android:hint="@string/ime_i_prezime"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/naziv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/ime_i_prezime"
            android:inputType="text"
            android:paddingBottom="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxBackgroundMode="outline"
            android:hint="@string/adresa"
            >
        <com.google.android.material.textview.MaterialAutoCompleteTextView
            android:text=""

            android:id="@+id/autocomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/adresa"
            android:paddingBottom="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <AutoCompleteTextView
            android:text=""

            android:id="@+id/grad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/grad" />

        <AutoCompleteTextView
            android:text=""

            android:id="@+id/zupanija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/upanija"

            />

        <EditText
            android:text=""

            android:id="@+id/broj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/broj_mobitela"
            android:inputType="number|textPersonName" />

        <EditText
            android:text=""

            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/lozinka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/lozinka_min_6_znakova"
            android:inputType="textPassword"
            android:paddingBottom="20dp" />

        <EditText
            android:text=""

            android:id="@+id/potvrdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/potvrdi_lozinku"
            android:inputType="textPassword"
            android:paddingBottom="20dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="134dp"
            android:layout_height="38dp"
            android:text="@string/poka_i_lozinku" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registriraj" />

    </LinearLayout>

</RelativeLayout>