<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_"
            android:title="@string/po_etna" />
        <item
            android:visible="false"
            android:id="@+id/dodaj_objavu"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/nova_objava" />
        <item
            android:visible="false"
            android:id="@+id/ispis_objava"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/moje_objave" />
    </group>
</menu>
