<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditZiv">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="316dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="6dp">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true">

                <Button
                    android:id="@+id/button_choose_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:text="@string/odaberi_slike"
                    android:textColor="#050505" />
            </com.smarteist.autoimageslider.SliderView>

            <Button
                android:id="@+id/obrisi_sliku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/obrisi_slik"
                android:textColor="#050505"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/stanje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:weightSum="0.75">

                <RadioButton
                    android:id="@+id/rjeseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rješeno" />

                <RadioButton
                    android:id="@+id/nerjeseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nerješeno" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="vertical">

                <Button
                    android:id="@+id/uplodaj"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:background="@drawable/buttona"
                    android:drawableLeft="@drawable/ic_upload"
                    android:gravity="center"
                    android:text="@string/uplodaj"
                    android:textColor="@color/ef_white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/izgubljeno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/izgubljeno" />

                <RadioButton
                    android:id="@+id/nadeno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/na_eno" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/vrsta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/pas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pas" />

                <RadioButton
                    android:id="@+id/macka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_ka" />

                <RadioButton
                    android:id="@+id/ptica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ptica" />

                <RadioButton
                    android:id="@+id/zec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zec" />

                <RadioButton
                    android:id="@+id/drugo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drugo" />
            </RadioGroup>

            <AutoCompleteTextView
                android:id="@+id/adresa_ziv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/adresa"
                android:paddingBottom="10dp"
                android:text="" />

            <AutoCompleteTextView
                android:id="@+id/grad_ziv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/grad"
                android:text="" />

            <AutoCompleteTextView
                android:id="@+id/zupanija_ziv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/upanija"

                android:text="" />
        </LinearLayout>

        <EditText
            android:id="@+id/opis_ziv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:autofillHints=""
            android:background="@null"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/opis"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="122dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="145dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="144dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="145dp" />

</RelativeLayout>
</ScrollView>