<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrikazZivFragment">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="316dp"
              android:layout_marginStart="5dp"
              android:layout_marginLeft="5dp"
              android:layout_marginTop="5dp"
              android:layout_marginEnd="5dp"
              android:layout_marginRight="5dp"
              android:layout_marginBottom="5dp"
              app:cardCornerRadius="6dp">

              <com.smarteist.autoimageslider.SliderView
                  android:id="@+id/imageSlider"
                  app:sliderAnimationDuration="600"
                  app:sliderAutoCycleDirection="back_and_forth"
                  app:sliderAutoCycleEnabled="true"
                  app:sliderIndicatorAnimationDuration="600"
                  app:sliderIndicatorGravity="center_horizontal|bottom"
                  app:sliderIndicatorMargin="15dp"
                  app:sliderIndicatorOrientation="horizontal"
                  app:sliderIndicatorPadding="3dp"
                  app:sliderIndicatorRadius="2dp"
                  app:sliderIndicatorSelectedColor="#5A5A5A"
                  app:sliderIndicatorUnselectedColor="#FFF"
                  app:sliderScrollTimeInSec="1"
                  app:sliderStartAutoCycle="true"
                  android:layout_width="match_parent"
                  android:layout_height="297dp"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"
                  android:layout_marginStart="0dp"
                  android:layout_marginLeft="0dp"
                  android:layout_marginEnd="0dp"
                  android:layout_marginRight="0dp"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentLeft="true" />

              <ImageView
                  android:id="@+id/favorite"
                  app:srcCompat="@drawable/ic_favorite_border_yellow"
                  android:layout_width="45dp"
                  android:layout_height="43dp"
                  android:layout_gravity="end|bottom"
                  android:clickable="true"
                  android:focusable="true"
                  tools:ignore="VectorDrawableCompat" />

          </androidx.cardview.widget.CardView>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center">

              <ImageView
                  android:id="@+id/profile_prikaz"
                  android:layout_width="27dp"
                  android:layout_height="match_parent"
                  app:srcCompat="@mipmap/ic_launcher_round" />

              <TextView
                  android:id="@+id/korisnik"
                  android:layout_width="117dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginStart="5dp"
                  android:layout_weight="0.2"
                  android:gravity="start"
                  android:text="@string/vlasnik"
                  android:textColor="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textView5"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="end"
                  android:text="Stanje:  "
                  android:textAllCaps="false"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/stanje"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_weight="1"
                  android:gravity="start"
                  android:text="@string/stanje"
                  android:textColor="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textView4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="Status: "
                  android:gravity="end"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/status"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center|start"
                  android:text="@string/status"
                  android:textColor="#000000" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textView6"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="Vrsta:  "
                  android:gravity="end"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/vrsta"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center|start"
                  android:text="@string/vrsta"
                  android:textColor="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textView9"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="Stvoreno:  "
                  android:gravity="end"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/datum"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="end"
                  android:layout_weight="1"

                  android:gravity="center|start"
                  android:hint="@string/datum"
                  android:textColor="#000000"
                  android:textColorHint="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textView7"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/a_urirano_z"
                  android:gravity="end"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/datum_azur"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"

                  android:textColor="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textViewadresa"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="end"
                  android:text="Adresa:  "
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/address"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center|start"
                  android:text="@string/adresa"
                  android:textColor="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="horizontal"
              >

              <TextView
                  android:id="@+id/textView2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="end"
                  android:text="Grad:  "
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/grad_pri"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/grad"
                  android:textColor="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textView3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="end"
                  android:text="@string/upanija_z"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/zupanija_pri"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/zupanija"
                  android:textColor="#000000" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <TextView
                  android:id="@+id/opis"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:scrollIndicators="end"
                  android:text="@string/opis"
                  android:textColor="#000000" />
          </LinearLayout>


      </LinearLayout>
  </RelativeLayout>

</ScrollView>